@@ -1,1 +1,1 @@
-<%= value :char %>: <%= value :code %>
+<% gluon :char %>: <% gluon :code %>
