@@ -1,2 +1,0 @@
-<%= checkbox :checked, :id => value(:check_id, :escape => false) %>
-<label for="<%= value :check_id %>"><%= value :text %></label>
