@@ -1,1 +1,0 @@
-<em><%= value :text %></em>
